# decision-tree

./: .gitignore  CMakeLists.txt  PERFORMANCE.md  README.md  benchmark.py  conanfile.py
bench/: tree_benchmark.cpp
datasets/: mushroom_fixed.csv
src/: csv.h  main.cpp  tree.cpp  tree.h
tests/: test_tree.cpp
tst/: tree_tests.cpp
